improve circle-ci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,12 @@
 version: 2.1
 docker:
-    - image: archlinux/archlinux
+    - image: archlinux
 jobs:
     one:
         docker:
             - image: archlinux
         steps:
+            - run: uname -a
             - run: pacman -Sy --noconfirm
             - run: pacman -S --noconfirm base-devel
             - run: pacman -S --noconfirm meson
