further refactor main file

--- a/src/meson.build
+++ b/src/meson.build
@@ -56,6 +56,7 @@ srcs = files(
     'event_handler.c',
     'lib/event_handler/lib_event_handler.c',
     'lib/event_handler/local_event_handler.c',
+    'layer_shell.c',
   )
 
 libName = 'japokwm'
