--- a/meson.build
+++ b/meson.build
@@ -33,6 +33,32 @@ foreach p:protocols
     endif
 endforeach
 
+scdoc = dependency('scdoc', version: '>=1.9.2', native: true)
+if scdoc.found()
+    scdoc_prog = find_program(scdoc.get_pkgconfig_variable('scdoc'), native: true)
+    sh = find_program('sh', native: true)
+    mandir = get_option('mandir')
+    man_files = [
+        'man/japokwm.1.scd',
+    ]
+    foreach filename : man_files
+        topic = filename.split('.')[-3].split('/')[-1]
+        section = filename.split('.')[-2]
+        output = '@0@.@1@'.format(topic, section)
+
+        custom_target(
+            output,
+            input: filename,
+            output: output,
+            command: [
+                sh, '-c', '@0@ < @INPUT@ > @1@'.format(scdoc_prog.path(), output)
+            ],
+            install: true,
+            install_dir: '@0@/man@1@'.format(mandir, section)
+        )
+    endforeach
+endif
+
 # meson.add_install_script('install.sh')
 # config files
 subdir('src')
