create man pages for usage

--- a/meson.build
+++ b/meson.build
@@ -40,6 +40,7 @@ if scdoc.found()
     mandir = get_option('mandir')
     man_files = [
         'man/japokwm.1.scd',
+        'man/japokwm.5.scd',
     ]
     foreach filename : man_files
         topic = filename.split('.')[-3].split('/')[-1]
