--- a/src/meson.build
+++ b/src/meson.build
@@ -58,6 +58,7 @@ srcs = files(
     'lib/event_handler/lib_event_handler.c',
     'lib/event_handler/local_event_handler.c',
     'layer_shell.c',
+    'lib/monitor/lib_monitor.c',
   )
 
 libName = 'japokwm'
