--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,28 +2,23 @@ version: 2.1
 jobs:
     one:
         docker:
-            - image: cimg/base:edge-20.04
+            - image: archlinux
         steps:
             - checkout
-            - run: env DEBIAN_FRONTEND=noninteractive
-            - run: sudo ln -snf /usr/share/zoneinfo/$CONTAINER_TIMEZONE /etc/localtime
-            - run: sudo bash -c "echo $CONTAINER_TIMEZONE > /etc/timezone"
-            - run: sudo apt-get update
-            - run: sudo apt-get install -y meson
-            - run: sudo apt-get install -y libwlroots-dev
-            - run: sudo apt-get install -y liblua5.3-dev
-            - run: sudo apt-get install -y libjson-c-dev
-            - run: sudo apt-get install -y scdoc
-            - run: sudo apt-get install -y cmake
-            - run: sudo apt-get install -y libwayland-dev
-            - run: sudo apt-get install -y wayland-protocols
-            - run: sudo apt-get install -y check
-            - run: sudo apt-get install -y gcovr
+            - run: pacman -Sy --noconfirm
+            - run: pacman -S --noconfirm base-devel
+            - run: pacman -S --noconfirm meson
+            - run: pacman -S --noconfirm wlroots
+            - run: pacman -S --noconfirm lua
+            - run: pacman -S --noconfirm wayland
+            - run: pacman -S --noconfirm wayland-protocols
+            - run: pacman -S --noconfirm check
+            - run: pacman -S --noconfirm gcovr
             - run: ls
             - run: whereis gcc
             - run: meson -Db_coverage=true build
             - run: cat /root/project/build/meson-logs/meson-log.txt
-            - run: ls & cd build && meson compile
+            - run: cd build && meson compile
             - run: cd build && meson test
             - store_test_results:
                 path: build/meson-logs
