improve github actions

--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -1,9 +1,8 @@
-name: Action
+name: Tests
 on:
   push:
       branches:
-          - main
-          - addGithubActions
+          - master
   workflow_dispatch:
 jobs:
     vm:
