--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -38,7 +38,7 @@ jobs:
               uses: EnricoMi/publish-unit-test-result-action@v1
               if: always()
               with:
-                  files: test-results/**/*.xml
+                  files: build/meson-logs/*
             - run: |
                 ninja -C build coverage
                 bash <(curl -s https://codecov.io/bash)
