(build) add missing install: true

--- a/src/meson.build
+++ b/src/meson.build
@@ -82,4 +82,6 @@ executable('japokwm',
       [main],
       dependencies: deps,
       include_directories: inc,
-      link_with: [wmlib])
+      link_with: [wmlib],
+      install: true,
+      )
