(build): improve meson build file

--- a/test/meson.build
+++ b/test/meson.build
@@ -2,31 +2,39 @@
 extraLibs = [dependency('check')]
 c_args = ['-I../include']
 
-t = executable('container_test', ['container_test.c'], 
+tests = files(
+    'container_test.c',
+    'tile/tileUtils_test.c',
+    'utils/coreUtils_test.c',
+    'utils/gapUtils_test.c',
+    'utils/stringUtils_test.c',
+    'workspace_test.c',
+    )
+
+foreach test_file: tests
+    r = run_command('basename', test_file)
+    if r.returncode() != 0
+      message(r.stderr().strip())
+    endif
+    test_file_name = r.stdout().strip()
+
+    t = executable(test_file_name, [test_file], 
                c_args: c_args,
                dependencies: [deps, extraLibs],
                include_directories: inc,
                link_with: [wmlib],
               )
-test('container', t)
-t = executable('coreUtils_test', ['utils/coreUtils_test.c'], 
-               c_args: c_args,
-               dependencies: [deps, extraLibs],
-               include_directories: inc,
-               link_with: [wmlib],
-              )
-test('coreUtils', t)
-t = executable('gapUtils_test', ['utils/gapUtils_test.c'], 
-               c_args: c_args,
-               dependencies: [deps, extraLibs],
-               include_directories: inc,
-               link_with: [wmlib],
-              )
-test('gapUtils', t)
-t = executable('tileUtils_test', ['tile/tileUtils_test.c'], 
-               c_args: c_args,
-               dependencies: [deps, extraLibs],
-               include_directories: inc,
-               link_with: [wmlib],
-              )
-test('tileUtils', t)
+
+    # delete last part of the filename which is usally _test
+    components = test_file_name.split('_')
+    result = []
+    foreach component : components
+        if (component == components[components.length()-1])
+            continue
+        endif
+        result = result + [component]
+    endforeach
+    test_name = '_'.join(result)
+
+    test(test_name, t)
+endforeach
