(test): update Test.yml

--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -26,9 +26,9 @@ jobs:
               name: Run in container
             - run: |
                 meson -Db_coverage=true build
-                meson -C build compile
-                meson -C build test
-                ninja -C build coverage
+                meson compile -C build
+                meson test -C build
+                ninja coverage -C build
                 bash <(curl -s https://codecov.io/bash)
             - name: Publish Unit Test Results
               uses: EnricoMi/publish-unit-test-result-action@v1
