(test): fix tests

--- a/test/meson.build
+++ b/test/meson.build
@@ -2,7 +2,7 @@
 extraLibs = [dependency('check')]
 c_args = ['-I../include']
 
-tests = files(
+test_files = files(
     'container_test.c',
     'tile/tileUtils_test.c',
     'utils/coreUtils_test.c',
@@ -11,7 +11,7 @@ tests = files(
     'workspace_test.c',
     )
 
-foreach test_file: tests
+foreach test_file: test_files
     r = run_command('basename', test_file)
     if r.returncode() != 0
       message(r.stderr().strip())
@@ -25,16 +25,5 @@ foreach test_file: tests
                link_with: [wmlib],
               )
 
-    # delete last part of the filename which is usally _test
-    components = test_file_name.split('_')
-    result = []
-    foreach component : components
-        if (component == components[components.length()-1])
-            continue
-        endif
-        result = result + [component]
-    endforeach
-    test_name = '_'.join(result)
-
-    test(test_name, t)
+    test(test_file_name, t)
 endforeach
