(feat): add tags feature

--- a/src/meson.build
+++ b/src/meson.build
@@ -72,6 +72,8 @@ srcs = files(
     'bitset/bitset.c',
     'bitset/vector.c',
     'workspace_selector.c',
+    'container_lists.c',
+    'view.c'
   )
 
 libName = 'japokwm_lib'
