(fix): fix Test.yml

--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -29,10 +29,10 @@ jobs:
                 meson compile -C build
                 meson test -C build
               name: Build
-            - run: |
-                ninja coverage -C build
-                bash <(curl -s https://codecov.io/bash)
-              name: Upload coverage
+            # - run: |
+            #     ninja coverage -C build
+            #     bash <(curl -s https://codecov.io/bash)
+            #   name: Upload coverage
             - name: Publish Unit Test Results
               uses: EnricoMi/publish-unit-test-result-action@v1
               if: always()
