feat: implement basic dwm style tag system on top of workspaces

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,4 +1,5 @@
-add_project_arguments('-rdynamic', '-DWLR_USE_UNSTABLE', '-Werror', '-Wno-unused-function','-Wno-uninitialized', language: 'c')
+add_project_arguments('-rdynamic', '-DWLR_USE_UNSTABLE', '-Werror',
+'-Wno-unused-function', '-Wno-uninitialized', '-Wno-sizeof-pointer-div', language: 'c')
 
 deps = [\
     dependency('xcb'),
@@ -24,28 +25,42 @@ deps += [luaDep]
 
 main = files('main.c')
 srcs = files(
+    'bitset/bitset.c',
+    'bitset/vector.c',
     'client.c',
+    'clipboard.c',
     'command.c',
     'container.c',
     'cursor.c',
+    'event_handler.c',
     'ipc-json.c',
     'ipc-server.c',
     'keybinding.c',
+    'keyboard.c',
+    'layer_shell.c',
     'layout.c',
+    'layout_set.c',
     'lib/actions/actions.c',
     'lib/actions/libcontainer.c',
     'lib/config/config.c',
     'lib/config/localconfig.c',
+    'lib/event_handler/lib_event_handler.c',
+    'lib/event_handler/local_event_handler.c',
     'lib/info/info.c',
     'lib/layout/lib_layout.c',
+    'lib/monitor/lib_monitor.c',
+    'list_set.c',
+    'main.c',
     'monitor.c',
     'options.c',
     'output.c',
     'popup.c',
     'render/render.c',
     'root.c',
+    'scratchpad.c',
     'server.c',
     'stringop.c',
+    'tagset.c',
     'tile/tile.c',
     'tile/tileUtils.c',
     'translationLayer.c',
@@ -55,21 +70,11 @@ srcs = files(
     'utils/stringUtils.c',
     'utils/writeFile.c',
     'wlr-layer-shell-unstable-v1-protocol.c',
+    'wlr_signal.c',
     'workspace.c',
     'xdg-shell-protocol.c',
-    'xwayland.c',
-    'keyboard.c',
-    'layout_set.c',
-    'event_handler.c',
-    'lib/event_handler/lib_event_handler.c',
-    'lib/event_handler/local_event_handler.c',
-    'layer_shell.c',
-    'lib/monitor/lib_monitor.c',
     'xdg_shell.c',
-    'clipboard.c',
-    'scratchpad.c',
-    'bitset/bitset.c',
-    'bitset/vector.c',
+    'xwayland.c',
   )
 
 libName = 'japokwm_lib'
