refactor: fix file naming convention

--- a/src/meson.build
+++ b/src/meson.build
@@ -29,13 +29,13 @@ srcs = files(
     'layer_shell.c',
     'layout.c',
     'layout_set.c',
-    'lib/actions/actions.c',
-    'lib/actions/libcontainer.c',
-    'lib/config/config.c',
-    'lib/config/localconfig.c',
+    'lib/actions/lib_actions.c',
+    'lib/actions/lib_container.c',
+    'lib/config/lib_config.c',
+    'lib/config/local_config.c',
     'lib/event_handler/lib_event_handler.c',
     'lib/event_handler/local_event_handler.c',
-    'lib/info/info.c',
+    'lib/info/lib_info.c',
     'lib/layout/lib_layout.c',
     'lib/monitor/lib_monitor.c',
     'list_set.c',
