feat: add second action to japokmsg

--- a/src/meson.build
+++ b/src/meson.build
@@ -29,6 +29,9 @@ srcs = files(
     'layer_shell.c',
     'layout.c',
     'layout_set.c',
+    'command/kill.c',
+    'command_list.c',
+    'lib/actions/actions.c',
     'lib/actions/lib_actions.c',
     'lib/actions/lib_container.c',
     'lib/config/lib_config.c',
