feat: add cmd_eval so that you can execute functions used in config in ipc

--- a/src/meson.build
+++ b/src/meson.build
@@ -31,8 +31,10 @@ srcs = files(
     'layout_set.c',
     'command/kill.c',
     'command_list.c',
+    'command/command_config.c',
     'lib/actions/actions.c',
     'lib/actions/lib_actions.c',
+    'lib/config/config.c',
     'lib/actions/lib_container.c',
     'lib/config/lib_config.c',
     'lib/config/local_config.c',
