fix: fix some protocols not working correctly

--- a/japokmsg/meson.build
+++ b/japokmsg/meson.build
@@ -7,7 +7,7 @@ japokmsgFiles = files(
 executable(
     'japokmsg',
     [commonSrcs, japokmsgFiles],
-    include_directories: includeDirectories,
+    include_directories: include_dirs,
     dependencies: [deps],
     install: true
 )
