feat: simplify unit tests and remove check dependency

--- a/test/meson.build
+++ b/test/meson.build
@@ -1,5 +1,4 @@
 # unit test setup
-extraLibs = [dependency('check')]
 c_args = ['-I../include']
 
 test_files = files(
@@ -10,6 +9,7 @@ test_files = files(
     'utils/stringUtils_test.c',
     'workspace_test.c',
     'scratchpad_test.c',
+    'bitset_test.c'
     )
 
 foreach test_file: test_files
@@ -21,7 +21,7 @@ foreach test_file: test_files
 
     t = executable(test_file_name, [test_file], 
                c_args: c_args,
-               dependencies: [deps, extraLibs],
+               dependencies: [deps],
                include_directories: include_dirs,
                link_with: [wmlib],
               )
