--- a/.github/workflows/TestAur.yml
+++ b/.github/workflows/TestAur.yml
@@ -15,6 +15,8 @@ jobs:
                 uname -a
                 pacman -Sy --noconfirm
                 pacman -S --noconfirm base-devel
-                pacman -S --noconfirm paru
+                git clone https://aur.archlinux.org/paru.git
+                cd paru
+                makepkg -si
                 paru -S japokwm-git
               name: Run in container
