refactor: refactor TestAur.yml

--- a/.github/workflows/TestAur.yml
+++ b/.github/workflows/TestAur.yml
@@ -19,4 +19,4 @@ jobs:
                 cd paru
                 makepkg -si
                 paru -S japokwm-git
-              name: Run in container
+              name: Run Test Aur
