refactor: move certain stucts to their own files

--- a/src/meson.build
+++ b/src/meson.build
@@ -42,7 +42,10 @@ srcs = files(
     'lib/info/lib_info.c',
     'lib/layout/lib_layout.c',
     'lib/monitor/lib_monitor.c',
-    'list_set.c',
+    'list_sets/container_stack_set.c',
+    'list_sets/focus_stack_set.c',
+    'list_sets/list_set.c',
+    'list_sets/visual_stack_set.c',
     'main.c',
     'monitor.c',
     'options.c',
