feat: add vim like keybindings

--- a/src/meson.build
+++ b/src/meson.build
@@ -74,12 +74,13 @@ wmlib = static_library(libName,
               [srcs, commonSrcs],
               dependencies: deps,
               include_directories: include_dirs,
-              link_args: ['-lm'],
+              link_args: link_args,
               )
 executable('japokwm',
       [main],
       dependencies: deps,
       include_directories: include_dirs,
+      link_args: link_args,
       link_with: [wmlib],
       install: true,
       )
