--- a/meson.build
+++ b/meson.build
@@ -90,7 +90,7 @@ deps = [\
     wayland_client,
     wayland_protos,
     dependency('pixman-1'),
-    dependency('wlroots', version: '>=0.13'),
+    dependency('wlroots', version: ['>=0.14' ,'< 0.15']),
     dependency('x11'),
     dependency('json-c'),
     dependency('libnotify'),
