--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,4 +1,4 @@
-option('xwayland', type: 'boolean', value: 'false', description: 'Enable support for X11 applications')
+option('xwayland', type: 'boolean', value: 'true', description: 'Enable support for X11 applications')
 option('zsh-completions', type: 'boolean', value: true, description: 'Install zsh shell completions.')
 option('bash-completions', type: 'boolean', value: true, description: 'Install bash shell completions.')
 option('fish-completions', type: 'boolean', value: true, description: 'Install fish shell completions.')
