refactor: rename files lib_config -> lib_options

--- a/src/meson.build
+++ b/src/meson.build
@@ -34,8 +34,8 @@ srcs = files(
     'command/commands.c',
     'lib/actions/lib_actions.c',
     'lib/actions/lib_container.c',
-    'lib/config/lib_config.c',
-    'lib/config/local_config.c',
+    'lib/options/lib_options.c',
+    'lib/options/local_options.c',
     'lib/event_handler/lib_event_handler.c',
     'lib/event_handler/local_event_handler.c',
     'lib/info/lib_info.c',
