refactor: remove useless directories in lib

--- a/src/meson.build
+++ b/src/meson.build
@@ -14,16 +14,13 @@ deps += [luaDep]
 
 main = files('main.c')
 srcs = files(
-    'rules/rule.c',
-    'rules/mon_rule.c',
-    'input_manager.c',
-    'seat.c',
-    'bitset/bitset.c',
     'client.c',
+    'color.c',
     'command.c',
     'container.c',
     'cursor.c',
     'event_handler.c',
+    'input_manager.c',
     'ipc-json.c',
     'ipc-server.c',
     'keybinding.c',
@@ -31,44 +28,52 @@ srcs = files(
     'layer_shell.c',
     'layout.c',
     'layout_set.c',
-    'command/commands.c',
-    'lib/actions/lib_actions.c',
-    'lib/actions/lib_container.c',
-    'lib/options/lib_options.c',
-    'lib/options/local_options.c',
-    'lib/event_handler/lib_event_handler.c',
-    'lib/event_handler/local_event_handler.c',
-    'lib/info/lib_info.c',
-    'lib/layout/lib_layout.c',
-    'lib/monitor/lib_monitor.c',
-    'list_sets/container_stack_set.c',
-    'list_sets/focus_stack_set.c',
-    'list_sets/list_set.c',
     'main.c',
     'monitor.c',
     'options.c',
     'output.c',
+    'pointer-constraints-unstable-v1-protocol.c',
     'popup.c',
-    'render/render.c',
     'root.c',
     'scratchpad.c',
+    'seat.c',
     'server.c',
+    'tablet-unstable-v2-protocol.c',
     'tagset.c',
-    'tile/tileUtils.c',
     'translationLayer.c',
+    'wlr-layer-shell-unstable-v1-protocol.c',
+    'wlr_signal.c',
+    'workspace.c',
+    'xdg-output-unstable-v1-protocol.c',
+    'xdg-shell-protocol.c',
+    'xdg_shell.c',
+    'xwayland.c',
+    'bitset/bitset.c',
+    'command/commands.c',
+    'lib/lib_actions.c',
+    'lib/lib_color.c',
+    'lib/lib_container.c',
+    'lib/lib_event_handler.c',
+    'lib/lib_info.c',
+    'lib/lib_layout.c',
+    'lib/lib_monitor.c',
+    'lib/lib_options.c',
+    'lib/lib_server.c',
+    'lib/lib_workspace.c',
+    'lib/local_event_handler.c',
+    'lib/local_options.c',
+    'list_sets/container_stack_set.c',
+    'list_sets/focus_stack_set.c',
+    'list_sets/list_set.c',
+    'render/render.c',
+    'rules/mon_rule.c',
+    'rules/rule.c',
+    'tile/tileUtils.c',
     'utils/coreUtils.c',
     'utils/gapUtils.c',
     'utils/parseConfigUtils.c',
     'utils/stringUtils.c',
     'utils/writeFile.c',
-    'wlr_signal.c',
-    'workspace.c',
-    'xdg_shell.c',
-    'xwayland.c',
-    'lib/workspace/lib_workspace.c',
-    'lib/server/lib_server.c',
-    'lib/lib_color.c',
-    'color.c'
   )
 
 libName = 'japokwm_lib'
