feat: add files

--- a/src/meson.build
+++ b/src/meson.build
@@ -46,16 +46,24 @@ srcs = files(
     'bitset/bitset.c',
     'command/commands.c',
     'lib/lib_actions.c',
-    'lib/lib_list2D.c',
+    'lib/lib_bitset.c',
     'lib/lib_color.c',
     'lib/lib_container.c',
-    'lib/lib_list.c',
-    'lib/lib_geom.c',
+    'lib/lib_cursor.c',
+    'lib/lib_cursor_mode.c',
+    'lib/lib_direction.c',
     'lib/lib_event_handler.c',
+    'lib/lib_focus_set.c',
+    'lib/lib_geom.c',
+    'lib/lib_geometry.c',
     'lib/lib_info.c',
     'lib/lib_layout.c',
+    'lib/lib_list.c',
+    'lib/lib_list2D.c',
     'lib/lib_monitor.c',
     'lib/lib_options.c',
+    'lib/lib_output_transform.c',
+    'lib/lib_screen_transform.c',
     'lib/lib_server.c',
     'lib/lib_workspace.c',
     'lib/local_event_handler.c',
@@ -72,8 +80,6 @@ srcs = files(
     'utils/parseConfigUtils.c',
     'utils/stringUtils.c',
     'utils/writeFile.c',
-    'lib/lib_bitset.c',
-    'lib/lib_focus_set.c',
   )
 
 libName = 'japokwm_lib'
