--- a/src/meson.build
+++ b/src/meson.build
@@ -65,6 +65,7 @@ srcs = files(
     'lib/lib_server.c',
     'lib/lib_root.c',
     'lib/lib_workspace.c',
+    'lib/lib_container_property.c',
     'lib/local_event_handler.c',
     'lib/local_options.c',
     'list_sets/container_stack_set.c',
